--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     "trailingComma": "all"
   },
   "scripts": {
+    "lint": "eslint --fix .",
+    "lint:check": "eslint .",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "tsc": "tsc -b"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/bun": "latest",
-    "prettier": "^3.5.3"
+    "eslint": "^9.27.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unicorn": "^59.0.1",
+    "prettier": "^3.5.3",
+    "typescript-eslint": "^8.32.1"
   },
   "peerDependencies": {
     "typescript": "^5"
