eslint.config.js -> eslint.config.ts

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": ".",
-    "outDir": "build",
+    "outDir": "build/default",
 
     "lib": ["ESNext"],
     "target": "ESNext",
