--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "@types/bun": "latest",
+    "@types/eslint-plugin-security": "^3.0.0",
     "eslint": "^9.27.0",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
@@ -29,5 +30,9 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@types/signale": "^1.4.7",
+    "signale": "^1.4.0"
   }
 }
