--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "epikrypsi",
+  "version": "0.0.1",
+  "description": "Stores files in an encrypted volume",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -33,6 +35,8 @@
   },
   "dependencies": {
     "@types/signale": "^1.4.7",
-    "signale": "^1.4.0"
+    "@types/yargs": "^17.0.33",
+    "signale": "^1.4.0",
+    "yargs": "^17.7.2"
   }
 }
