--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@types/read": "^0.0.32",
     "@types/signale": "^1.4.7",
     "@types/yargs": "^17.0.33",
+    "read": "^4.1.0",
     "signale": "^1.4.0",
     "yargs": "^17.7.2"
   }
