--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^59.0.1",
+    "fast-check": "^4.1.1",
     "prettier": "^3.5.3",
     "typescript-eslint": "^8.32.1"
   },
