--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "files": [],
   "include": [],
-  "references": [{ "path": "./scripts" }, { "path": "./src" }, { "path": "./test" }]
+  "references": [
+    { "path": "./scripts" },
+    { "path": "./src" },
+    { "path": "./test" },
+    { "path": "./test/testing" }
+  ]
 }
